<resources>
    <string name="app_name">LUNYVER</string>
    <string name="valid">Valider</string>
    <string name="annul">Annuler</string>
    <string name="start_quizz">Commencer le Quizz</string>
    <string name="helpGetText">Veuillez saisir du texte</string>
    <string name="classical_game">Partie Classique</string>
    <string name="battle_royal">Battle Royal (A Venir)</string>
    <string name="capture_flag">Attrappe le drapeau (A Venir)</string>
    <string name="game4">A venir</string>
    <string name="titlePlayers">Personnages</string>
    <string name="chose_race">Veuillez choisir une nouvelle race</string>
    <string name="chose_class">Veuillez choisir une nouvelle classe</string>
    <string name="confirm_action">Etes vous sûre de vouloir faire cela ?</string>
    <string name="enter_text">Veuillez entrer du texte</string>
    <string name="enter_text_hint">Nom</string>
    <string name="fight">Combat</string>
    <string name="attaquant">Attaquants</string>
    <string name="defenseur">Défenseurs</string>
    <string name="start_fight">FIGHT</string>
    <string name="add_player">Sélectionnez les combattants</string>
    <string name="title_select_players">Sélectionnez les combattants</string>
    <string name="mob">Mob</string>
    <string name="boss">Boss</string>
    <string name="mob_title">Monstres</string>
    <string name="title_add_bonus">Ajouter un bonus</string>
    <string name="default_text">LUNYVER</string>
    <string name="continue_winner_off">Les attaquants remportent le combat. Voulez vous continuer ?</string>
    <string name="off_winner">Victoire des attaquants !</string>
</resources>
